set cursor label display css to inline-table, prevent wrapping at the right side
add multi-color hint for legend colorbox

--- a/core/src/main/web/outputdisplay/bko-plot/bko-plot.css
+++ b/core/src/main/web/outputdisplay/bko-plot/bko-plot.css
@@ -58,6 +58,7 @@
   width: auto;
   height: auto;
   border-radius: 2px;
+  display: inline-table;
 }
 
 .plot-coord,
